--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^18.2.6",
     "@angular/router": "^18.2.6",
     "@angular/ssr": "^18.2.6",
+    "@auth0/angular-jwt": "^5.2.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
