--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/ssr": "^18.2.6",
     "@auth0/angular-jwt": "^5.2.0",
     "express": "^4.18.2",
+    "ngx-currency": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
