--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,9 @@
         "no-array-constructor": "off",
         "no-void": "off",
         "dot-notation": "off",
-        "@angular-eslint/use-lifecycle-interface": "off"
+        "@angular-eslint/use-lifecycle-interface": "off",
+        "no-unused-expressions": "off",
+        "@typescript-eslint/no-unused-expressions": "off"
       }
     },
     {
