--- a/nginx.conf
+++ b/nginx.conf
@@ -5,11 +5,13 @@ http {
 
     server {
         root /usr/share/nginx/html;
+        server_name financer.net.br;
 
         index index.html;
 
-        location /painel {
-            try_files $uri $uri/ /index.html;
+        location /painel/ {
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ /painel/index.html;
         }
     }
 }
