--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,36 @@
 events{}
 
-http {
-    include /etc/nginx/mime.types;
+server {
+    listen 80;
+    server_name financer.net.br;
+    server_tokens off;
+    
+    # index index.html;
 
-    server {
+    location /painel/ {
         root /usr/share/nginx/html;
-        server_name financer.net.br;
+        try_files $uri $uri/ /painel/index.html;
+    }
 
-        index index.html;
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
 
-        location /painel/ {
-            root /usr/share/nginx/html;
-            try_files $uri $uri/ /painel/index.html;
-        }
+server {
+    listen 443 ssl;
+    server_name financer.net.br;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/financer.net.br/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/financer.net.br/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass  http://financer.net.br;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     }
 }
