--- a/nginx.conf
+++ b/nginx.conf
@@ -7,10 +7,14 @@ server {
     
     # index index.html;
 
-    location /painel/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /painel/index.html;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
     }
+
+    # location /painel/ {
+    #     root /usr/share/nginx/html;
+    #     try_files $uri $uri/ /painel/index.html;
+    # }
 
     location / {
         return 301 https://$host$request_uri;
