--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "serve:ssr:finance-angular": "node dist/finance-angular/server/server.mjs",
     "lint": "ng lint",
-    "recontainerize": "docker rm -f finance-angular && docker rmi -f finance-angular-finance-angular && docker system prune && docker-compose up -d --build"
+    "recontainerize": "docker rm -f finance-angular && docker rmi -f finance-angular-finance-angular && docker system prune && sudo docker-compose up -d --build"
   },
   "private": true,
   "dependencies": {
