--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,9 @@
         "dot-notation": "off",
         "@angular-eslint/use-lifecycle-interface": "off",
         "no-unused-expressions": "off",
-        "@typescript-eslint/no-unused-expressions": "off"
+        "@typescript-eslint/no-unused-expressions": "off",
+        "@angular-eslint/template/click-events-have-key-events": "off",
+        "@angular-eslint/template/interactive-supports-focus": "off"
       }
     },
     {
